# wikidot.py

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  llms.txt  pyproject.toml  setup.cfg  setup.py
.claude/agents/: code-committer.md  code-planner.md  dependency-analyzer.md  format-runner.md  lint-runner.md  memory-dir-manager.md  pr-creator.md  pr-reviewer.md  quality-checker.md  self-reviewer.md  test-runner.md  typecheck-runner.md
.claude/docs/: code-review-learnings.md  memory-file-formats.md  testing-guide.md  workflow-guide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check_code_quality.yml  docs.yml  integration_test.yml  publish.yml
docs/source/: conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/reference/: client.rst  common.rst  forum.rst  index.rst  page.rst  site.rst  user.rst  util.rst
src/wikidot/: __init__.py
src/wikidot/common/: __init__.py  decorators.py  exceptions.py  logger.py
src/wikidot/connector/: __init__.py  ajax.py  api.py
src/wikidot/module/: __init__.py  auth.py  client.py  forum.py  forum_category.py  forum_group.py  forum_post.py  forum_post_revision.py  forum_thread.py  page.py  page_file.py  page_revision.py  page_source.py  page_votes.py  private_message.py  site.py  site_application.py  site_member.py  user.py
src/wikidot/util/: __init__.py  async_helper.py  http.py  quick_module.py  requestutil.py  stringutil.py
src/wikidot/util/parser/: __init__.py  odate.py  user.py
src/wikidot/util/table/: __init__.py  char_table.py
test/unit/util/: test_convert_string.py
test/unit/util/parser/: test_odate.py  test_user.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/fixtures/amc_responses/forum/: editpost_form.json  forum_start.json  forum_start_empty.json  newthread_success.json  post_revision_content.json  post_revisions.json  post_revisions_single.json  posts_in_thread.json  posts_nested.json  posts_with_pseudo_post.json  savepost_success.json  thread_detail.json  threads_in_category.json
tests/fixtures/amc_responses/page/: cancelvote_success.json  listpages_empty.json  listpages_invalid.json  listpages_missing_fields.json  listpages_multiple.json  listpages_pm_rating.json  listpages_single.json  pageedit_existing.json  pageedit_locked.json  pageedit_success.json  ratepage_pm_success.json  ratepage_success.json  revisionlist.json  savepage_success.json  viewsource.json  whorated.json
tests/fixtures/amc_responses/quickmodule/: member_lookup.json  member_lookup_empty.json  page_lookup.json  page_lookup_empty.json  user_lookup.json
tests/fixtures/amc_responses/site/: applications.json  applications_empty.json  invite_member_already_invited.json  invite_member_already_member.json  invite_member_success.json  site_changes.json  site_changes_empty.json
tests/fixtures/html_samples/: odate_multiple_classes.html  odate_no_time.html  printuser_anonymous.html  printuser_anonymous_no_ip.html  printuser_deleted.html  printuser_deleted_no_id.html  printuser_guest.html  printuser_regular.html  printuser_wikidot.html  site_homepage.html  user_profile.html  user_profile_notfound.html
tests/integration/: README.md  conftest.py  test_forum_category.py  test_forum_post_revision.py  test_page_discussion.py  test_page_lifecycle.py  test_page_meta.py  test_page_revision.py  test_page_tags.py  test_page_votes.py  test_pm.py  test_site.py  test_user.py
tests/integration/helpers/: __init__.py  retry.py
tests/unit/: test_ajax.py  test_amc_client.py  test_async_helper.py  test_auth.py  test_client.py  test_exceptions.py  test_forum_category.py  test_forum_post.py  test_forum_post_revision.py  test_forum_thread.py  test_http.py  test_page.py  test_page_file.py  test_page_revision.py  test_page_votes.py  test_placeholder.py  test_private_message.py  test_quick_module.py  test_requestutil.py  test_search_pages_query.py  test_site.py  test_site_application.py  test_site_member.py  test_stringutil.py  test_user.py
tests/unit/parsers/: __init__.py  test_odate_parser.py  test_user_parser.py
wikidot/: __init__.py  base.py  client.py  connector.py  decorator.py  exceptions.py  file.py  forum.py  logger.py  old-wikidot.py  page.py  site.py  tag.py  user.py  variables.py  vote.py
wikidot/common/: decorators.py  exceptions.py  logger.py
wikidot/connector/: ajax.py  api.py
wikidot/module/: auth.py  client.py  page.py  page_revision.py  page_source.py  page_votes.py  private_message.py  site.py  site_application.py  user.py
wikidot/type/: user.py
wikidot/util/: convert_string.py  quick_module.py  requestutil.py  stringutil.py
wikidot/util/parser/: odate.py  user.py
wikidot/util/table/: char_table.py
