[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikidot"
version = "3.1.0dev13"
authors = [{ name = "ukwhatn", email = "ukwhatn@gmail.com" }]
description = "Wikidot Utility Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx >= 0.25,< 0.29",
    "beautifulsoup4 >= 4.12.2,< 4.15.0",
    "lxml >= 4.9.3,< 6.1.0",
]

[project.optional-dependencies]
build = [
    "build",
    "twine",
]
lint = [
    "ruff",
    "mypy",
]
format = [
    "ruff",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-intl>=2.1.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.3",
]

[project.urls]
"Homepage" = "https://github.com/ukwhatn/wikidot.py"
"Bug Tracker" = "https://github.com/ukwhatn/wikidot.py/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
lint.ignore = [
    "E501",   # line too long (handled by formatter)
    # 以下は段階的に修正予定（Phase 2で対応）
    "UP045",  # Optional[T] -> T | None (Task 2.1で対応)
    "UP037",  # Remove quotes from type annotation (Task 2.1で対応)
    "SIM105", # contextlib.suppress (Task 2.2で対応)
    "SIM102", # Combine if statements (コード可読性のため維持)
    "SIM108", # Ternary operator (コード可読性のため維持)
    "SIM110", # Use any() (コード可読性のため維持)
    "SIM117", # Combine with statements (Task 3.1で対応)
    "SIM401", # dict.get() (コード可読性のため維持)
    "B007",   # Unused loop variable (意図的な場合あり)
    "B008",   # Function call in default argument (既存コードの互換性)
    "B009",   # getattr with constant (コード意図があるため維持)
    "B020",   # Loop variable overrides iterable (要修正だが別タスクで対応)
    "B905",   # zip() without strict= (Python 3.10+で段階的に対応)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["wikidot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
# 以下は段階的に有効化予定
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# warn_unused_ignores = true