[metadata]
name = wikidot
version = 3.0.0
description = HTTP Request Library for wikidot
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ukwhatn
author_email = ukwhatn@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    bs4 >= 0.0.1
    httpx >= 0.23.1
    lxml >= 4.9.2
    nest-asyncio >= 1.5.6
